# chainnet

./: .gitignore  CMakeLists.txt  README.md
src/: axtChain.c  chainAntiRepeat.c  lavToPsl.c  netToAxt.c
src/lib/: CMakeLists.txt  bPlusTree.c  common.c  fuzzyFind.h  linefile.c  linefile.h  maf.c  nibTwo.c  obscure.c  options.c  portable.h  portimpl.c  portimpl.h  psl.c  psl.h  twoBit.c  udc.c  verbose.c
